--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  discover-20231103.tar.bz2: 5ad8c3292768492ad30d3f525621def0301b2430
+  discover-5.27.80.tar.xz: 77e7375f03e7c20eb1c22d998f0c0cfe2d0e23e5
