--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  discover-5.93.0.tar.xz: c9c43cb2ece13f033193d4d52efdda83dd7e7f0a
+  discover-20240217.tar.bz2: 38f4149dc68f208bec2378631d80583dbf282fe7
