--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   discover-20240217.tar.bz2: 38f4149dc68f208bec2378631d80583dbf282fe7
+  discover-20240222.tar.bz2: c7d1bc6588808fc54cf2240d13d76bef232114e1
