--- a/discover-wrapper.in
+++ b/discover-wrapper.in
@@ -11,15 +11,15 @@
 
 dbusRef=$(kdialog --desktopfile org.kde.discover --title $(gettext -d libdiscover 'Discover') --icon plasmadiscover --progressbar $(gettext -d libdiscover 'Updating...'))
 kdialogPid=`echo $dbusRef |cut -d- -f2 |cut -d' ' -f1`
-qdbus $dbusRef showCancelButton true
-qdbus $dbusRef Set "" "maximum" 0;
+@QTDIR@/bin/qdbus $dbusRef showCancelButton true
+@QTDIR@/bin/qdbus $dbusRef Set "" "maximum" 0;
 
 pkcon -y -p refresh force &
 pkPid=$!
 
-while ps $kdialogPid &>/dev/null && ps $pkPid &>/dev/null && [ "`qdbus $dbusRef org.kde.kdialog.ProgressDialog.wasCancelled`" != "true" ]; do
+while ps $kdialogPid &>/dev/null && ps $pkPid &>/dev/null && [ "`@QTDIR@/bin/qdbus $dbusRef org.kde.kdialog.ProgressDialog.wasCancelled`" != "true" ]; do
 	sleep 1
 done
-[ "`qdbus $dbusRef org.kde.kdialog.ProgressDialog.wasCancelled`" != "true" ] && kill $pkPid
-ps $kdialogPid &>/dev/null && qdbus $dbusRef close
-exec /usr/bin/plasma-discover "$@"
+[ "`@QTDIR@/bin/qdbus $dbusRef org.kde.kdialog.ProgressDialog.wasCancelled`" != "true" ] && kill $pkPid
+ps $kdialogPid &>/dev/null && @QTDIR@/bin/qdbus $dbusRef close
+exec /usr/bin/plasma-discover-main "$@"
